--- a/GitLab CI/local_android/gradle.gradle
+++ b/GitLab CI/local_android/gradle.gradle
@@ -19,7 +19,7 @@ artifactory {
         repository {
             repoKey = 'gradle-release-local'
             username = "ci-user"
-            password = "{{EDITED}}"
+            password = "MDP"
             maven = true
             
         }
@@ -28,7 +28,7 @@ artifactory {
         repository {
             repoKey = 'gradle-dev'
             username = "ci-user"
-            password = "{{EDITED}}"
+            password = "MDP"
             maven = true
             
         }
